--- a/nppRandomStringGenerator/Properties/Resources.resx
+++ b/nppRandomStringGenerator/Properties/Resources.resx
@@ -122,6 +122,6 @@
     <value>..\Resources\cancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="nppRandomStringGeneratorSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Storage\nppRandomStringGeneratorSettings.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Storage\nppRandomStringGeneratorSettings.ini;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
